style.css
/* Importing Google Fonts - "Inknut Antiqua" */
@import url('https://fonts.googleapis.com/css2?family=Inknut+Antiqua&display=swap');

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'Inknut Antiqua', serif;
    background-color: #FFFFFF;
    /* border: 1px solid red; */
}
html {
    scroll-behavior: smooth;
}

/* NavBar CSS */
.navContainer {
    height: 10vh;
    padding: 0 128px;
    display: flex;
    justify-content: space-between;
    align-items: center;
}
.navTitle {
    display: flex;
    justify-content: center;
    align-items: center;
    position: relative;
    height: 50px;
    gap: 0 12px;
}
#profilePic {
    width: 50px;
    height: 50px;
    border-radius: 50%;
    border: 1px solid black;
    cursor: pointer;
}
#nameTitle {
    font-size: 20px;
    cursor: pointer;
}
.navSearch {
    display: flex;
    justify-content: center;
    align-items: center;
    position: relative;
    height: 50px;
    gap: 0 12px;
}
#searchProjects {
    padding: 4px 8px;
    border: 2px solid #ccc;
    border-radius: 50px;
    font-size: 16px;
    background-color: #fff;
    background-image: url('https://i.ibb.co/brZY81x/search-Icon.png');
    background-size: 32px;
    background-position: 8px center;
    background-repeat: no-repeat;
    padding-left: 48px;
    transition: box-shadow 0.4s;
}
#searchProjects:focus {
    border-color: black;
    outline: none;
    box-shadow: 1px 1px 1px black;
}
#twitterBtn {
    width: 50px;
    height: 50px;
    padding: 12px 16px;
    text-transform: capitalize;
    font-size: 18px;
    line-height: 1.5rem;
    border: 1px solid black;
    border-radius: 4px;
    cursor: pointer;
    transition: transform 0.14s ease-out, box-shadow 0.14s ease-out;
}
#twitterBtn:hover {
    box-shadow: #000 1px 1px, #000 2px 2px, #000 3px 3px, #000 4px 4px;
    transform: translate3d(-4px, -4px, 0);
}
#twitterBtn:active {
    box-shadow: #FFFFFF 0 0;
    transform: translate3d(0, 0, 0);
}
.hrLine {
    border: none;
    height: 1px;
    background-color: #000;
    /* background-image: linear-gradient(to right, #fff, #ccc, #fff); */
}

/* NavBar CSS Responsive */
@media screen and (max-width: 1200px) {
    .navContainer {
        display: block;
        padding: 24px 48px;
        height: auto;
    }
    .navTitle {
        margin-bottom: 24px;
    }
    .navSearch {
        width: 100%;
    }
    #searchProjects {
        width: 75%;
    }
}

/* Body CSS */
.mainBodyContainer {
    padding: 16px 0;
    margin: 16px 0;
    display: flex;
    align-items: center;
    gap: 0 32px;
    position: relative;
}
/* left side container */
.bodyleftconatiner {
    width: 28%;
    margin-left: 128px;
    padding: 8px 0;
    border: 1px solid black;
    border-radius: 6px;
}
.bodyleftconatiner h3 {
    padding-left: 8px;
    letter-spacing: 0.8px;
    border-bottom: 1px solid black;
}
.difficultyConatiner {
    padding-left: 8px;
}

.bodyrightcontainer {
    width: 100%;
    margin-right: 128px;
}
.projects-container {
    display: grid;
    grid-template-columns: auto auto auto;
    gap: 36px;
}
.project-card {
    width: 300px;
    padding: 4px 0;
    border: 1px solid black;
    border-radius: 4px;
    cursor: pointer;
}
.project-card a {
    text-decoration: none;
    color: black;
}
.project-image {
    width: 280px;
    height: 300px;
    overflow: hidden;
    padding: 8px;
}
.project-title {
    padding-left: 12px;
    border-top: 1px solid black;
    border-bottom: 1px solid black;
}
.tags {
    display: flex;
    justify-content: space-between;
    padding: 0 12px;
}
@media screen and (max-width: 1500px) {
    .projects-container {
        grid-template-columns: auto auto;
    }
}

/* Footer CSS */
.ft-container {
    padding: 0 128px;
    height: 64px;
    display: flex;
    align-items: center;
}
.ft-text {
    font-size: 14px;
}
.ft-title {
    font-size: 18px;
    font-weight: bolder;
}

/* Footer Responsive CSS */
@media screen and (max-width: 1000px) {
    .ft-container {
        display: block;
        text-align: center;
        height: auto;
        padding: 0;
    }
}

